# docker_02

./: Dockerfile  README.md  database.py  main.py  pyproject.toml  requirements.txt
courses_v1_app/: .dockerignore  Dockerfile  main_v1.py  requirements.txt
courses_v2_app/: Dockerfile  crud.py  database.py  main_v2.py  models.py  schemas.py
data/: courses_app_v2.db
